--- a/app/globals.css
+++ b/app/globals.css
@@ -24,16 +24,16 @@
   }
 
   /* Community Card */
-  .community-card {
+  .group-card {
     @apply w-full rounded-lg bg-dark-3 px-4 py-5 sm:w-96;
   }
 
-  .community-card_btn {
+  .group-card_btn {
     @apply rounded-lg bg-primary-500 px-5 py-1.5 text-small-regular !text-light-1 !important;
   }
 
   /* thread card  */
-  .thread-card_bar {
+  .thought-card_bar {
     @apply relative mt-2 w-0.5 grow rounded-full bg-neutral-800;
   }
 
